syntax = "proto3";
package helloworld;

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply);
    rpc Sum (SumRequest) returns (SumReply);
}

message HelloRequest {
   string name = 1;
}

message HelloReply {
    string message = 1;
}

message SumRequest {
    double first = 1;
    double second = 2;
}

message SumReply {
    double total = 1;
}